# interactify

./: .gitignore
back/: Cargo.toml
back/src/: client.rs  main.rs  packet.rs
front/interactify/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
front/interactify/firebase/: .firebaserc
front/interactify/firebase/public/: index.html
front/interactify/firebase/public/assets/: index-5SWKjD8x.js  index-QUmqSpUF.js  index-Tl4zcXoR.css  index-m7l45Doy.js
front/interactify/src/: App.vue  main.ts  router.ts  utils.ts
front/interactify/src/network/: Network.ts
front/interactify/src/types/: Packet.ts
front/interactify/src/views/: Home.vue
