[package]
name = "interactify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wss = []

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
get_if_addrs = "0.5.3"
lazy_static = "1.4.0"
native-tls = "0.2.11"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-tungstenite = "0.21.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
